# macro_study

./: Cargo.toml
src/: .field.rs.pending-snap  field.rs  lib.rs  main.rs  test_helper.rs
src/snapshots/: encapsulate__field__input_bad__parse_attr_bad.snap  encapsulate__field__input_bad__parse_field_with_empty_attrs-2.snap  encapsulate__field__input_bad__parse_field_with_empty_attrs.snap  encapsulate__field__parse_attr_bad-2.snap  encapsulate__field__parse_attr_bad-3.snap  encapsulate__field__parse_attr_bad.snap  encapsulate__field__parse_field.snap  encapsulate__field__parse_field_with_string-2.snap  encapsulate__field__parse_field_with_string.snap  encapsulate__field__study_meta_path.snap  encapsulate__parse_fail-2.snap  encapsulate__parse_fail.snap  encapsulate__parse_input-2.snap  encapsulate__parse_input.snap
