[package]
name = "encapsulate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "^0.14.4"
quote = "^1.0.18"
proc-macro2 = "^1.0.56"
convert_case = "^0.6.0"
[dev-dependencies]
insta = "^1.29.0"
